# inscopix-cnmfe

./: .gitignore  .gitmodules  CMakeLists.txt  example.cpp  setup.py
src/exposed/: cnmfe.cpp
src/io/: isxCnmfeIO.cpp
src/utilities/: isxMemoryMappedFileUtils.cpp
test/: DependenciesTest.cpp
